tests/negative/gold/index-call-test.gold
tests/negative/index-call-test.toit:7:7: error: Can't call result of evaluating expression
  data[pos++] 499
      ^
tests/negative/index-call-test.toit:7:8: error: Can't assign to unknown 'pos'
  data[pos++] 499
       ^~~
Compilation failed
